# pythonUtils

./: .gitignore  LICENSE  README.md  setup.cfg
erlenberg/: __init__.py  logHandler.py  simpleDatabase.py
erlenberg/winutils/: __init__.py  ps.py
information/: README.md
information/logHandler/: README.md
