[metadata]
name = erlenberg
version = 2.0
author = Tizian Erlenberg
author_email = mail@erlenberg.net
description = Some personal librarys for python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
